--- a/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/src/main/resources/com/ardublock/block/ardublock.properties
@@ -133,7 +133,8 @@ bd.linksprite_LinkerKit=Linker Kit
 bd.tinkerkit=TinkerKit
 bd.utilities=Generic Hardware
 # BlockGenus initlabel
-bg.df_lcd_keypad=DFRobot LCD Keypad
+bg.df_lcd_keypad=LCD Keypad Write
+bg.df_lcd_keypad_clear=LCD Keypad Clear
 bg.Tinker_Accmeter=Accelerometer
 bg.Tinker_Button=Button
 bg.Tinker_Hall=Hall
@@ -227,7 +228,8 @@ bg.df_analog_mma7361_y=Y-Asix of Accelerometer
 bg.df_analog_mma7361_z=Z-Asix of Accelerometer
 bg.df_analog_gp2y0a21=Sharp GP2Y0A21 Distance Sensor
 bg.df_analog_moisture=Soil Moisture Sensor
-bg.df_lcd_keypad=LCD Keypad
+bg.df_lcd_keypad=Write LCD Keypad
+bg.df_lcd_keypad_clear=Clear LCD Keypad
 
 bg.digital-high=HIGH
 bg.digital-low=LOW
@@ -673,7 +675,8 @@ bg.df_relay.description=Relay Module
 bg.df_buzzer.description=Buzzer Module
 bg.df_buzzer_tone.description=Generates a square wave of the specified frequency (and 50% duty cycle) on a pin.
 bg.df_buzzer_tone_delay.description=Generates a square wave of the specified frequency (and 50%	duty cycle) on a pin.
-bg.df_lcd_keypad.description= lcd block that use liquicrystal
+bg.df_lcd_keypad.description= Write a string to the LCD screen
+bg.df_lcd_keypad_clear.description=Clear the LCD screen
 bg.seeed_joystick.description=Read analog value from analog pin
 bg.seeed_joystick_button.description=Read analog value from analog pin
 bg.seeed_o2_sensor=Gas Sensor(O2)
@@ -1470,3 +1473,5 @@ bg.Midi_GS=G#
 bg.Midi_A=A
 bg.Midi_AS=A#
 bg.Midi_B=B
+
+bd.evshield=EVShield
