EVShield and Touch Sensor

--- a/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/src/main/resources/com/ardublock/block/ardublock.properties
@@ -1475,3 +1475,15 @@ bg.Midi_AS=A#
 bg.Midi_B=B
 
 bd.evshield=EVShield
+bg.evshield_init=EVShield Init
+bg.evshield_init.description=Connect to the EVShield
+bg.evshield_SH_BAS1=Bank A Sensor 1
+bg.evshield_SH_BAS2=Bank A Sensor 2
+bg.evshield_SH_BBS1=Bank B Sensor 1
+bg.evshield_SH_BBS2=Bank B Sensor 2
+bg.evshield_SH_BAS1.description=Bank A Sensor 1
+bg.evshield_SH_BAS2.description=Bank A Sensor 2
+bg.evshield_SH_BBS1.description=Bank B Sensor 1
+bg.evshield_SH_BBS2.description=Bank B Sensor 2
+bg.evshield_touch=EVShield Touch Sensor
+bg.evshield_touch.description=EVShield Touch Sensor
