--- a/src/main/resources/com/ardublock/block/block-mapping.properties
+++ b/src/main/resources/com/ardublock/block/block-mapping.properties
@@ -289,3 +289,12 @@ ada_neopixel_Brightness=com.ardublock.translator.block.adafruit.Neopixel_Brightn
 loop1=com.ardublock.translator.block.LoopBlock
 loop2=com.ardublock.translator.block.ProgramBlock
 loop3=com.ardublock.translator.block.LoopBlock
+
+
+#EVShield
+evshield_init=com.ardublock.translator.block.evshield.EvshieldInit
+evshield_SH_BAS1=com.ardublock.translator.block.evshield.SHBAS1
+evshield_SH_BAS2=com.ardublock.translator.block.evshield.SHBAS2
+evshield_SH_BBS1=com.ardublock.translator.block.evshield.SHBBS1
+evshield_SH_BBS2=com.ardublock.translator.block.evshield.SHBBS2
+evshield_touch=com.ardublock.translator.block.evshield.Touch
