--- a/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/src/main/resources/com/ardublock/block/ardublock.properties
@@ -1487,3 +1487,17 @@ bg.evshield_SH_BBS1.description=Bank B Sensor 1
 bg.evshield_SH_BBS2.description=Bank B Sensor 2
 bg.evshield_touch=EVShield Touch Sensor
 bg.evshield_touch.description=EVShield Touch Sensor
+bg.evshield_light=EVShield NXT Light Sensor
+bg.evshield_light.description=EVShield NXT Light Sensor
+bg.evshield_ir=EVShield Infrared Sensor
+bg.evshield_ir.description=EVShield Infrared Sensor
+bg.evshield_bank_a=Bank A
+bg.evshield_bank_a.description=Bank A
+bg.evshield_bank_b=Bank B
+bg.evshield_bank_b.description=Bank B
+bg.evshield_motor_speed=EVShield Motor Speed
+bg.evshield_motor_speed.description=EVShield Motor Speed
+bg.evshield_SH_Motor_1=Motor 1
+bg.evshield_SH_Motor_1.description=Motor 1
+bg.evshield_SH_Motor_2=Motor 2
+bg.evshield_SH_Motor_2.description=Motor 2
