--- a/src/main/resources/com/ardublock/block/block-mapping.properties
+++ b/src/main/resources/com/ardublock/block/block-mapping.properties
@@ -298,3 +298,10 @@ evshield_SH_BAS2=com.ardublock.translator.block.evshield.SHBAS2
 evshield_SH_BBS1=com.ardublock.translator.block.evshield.SHBBS1
 evshield_SH_BBS2=com.ardublock.translator.block.evshield.SHBBS2
 evshield_touch=com.ardublock.translator.block.evshield.Touch
+evshield_light=com.ardublock.translator.block.evshield.Light
+evshield_ir=com.ardublock.translator.block.evshield.Infrared
+evshield_bank_a=com.ardublock.translator.block.evshield.BankA
+evshield_bank_b=com.ardublock.translator.block.evshield.BankB
+evshield_SH_Motor_1=com.ardublock.translator.block.evshield.SHMotor1
+evshield_SH_Motor_2=com.ardublock.translator.block.evshield.SHMotor2
+evshield_motor_speed=com.ardublock.translator.block.evshield.MotorSpeed
